--- a/README
+++ b/README
@@ -6,6 +6,11 @@ Turns a CIDR Notation range like
 
 into two IP addresses showing the start and end of the range.
 
+A live instance of Ranger is hosted at Heroku and can be found here:
+
+http://ranger.wellinformed.co.uk
+
+It's opensource/free (as in speech)/public domain. Do what you like with it.
 
 == Welcome to Rails
 
